fixes and decorators

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="grid gap-4">
-      <atomix-component>
+      <atomix-component data-name="Adrien">
         <span></span>
         <input class="input input-bordered" placeholder="name" />
       </atomix-component>
